# Delay-Aware-Pose-Prediction-for-XR

./: .gitignore  .gitmodules  Callstack.txt  README.md  Timestamps.txt
monado/src/xrt/auxiliary/math/: m_filter_one_euro.c
monado/src/xrt/auxiliary/tracking/: t_tracker_slam.cpp
monado/src/xrt/auxiliary/util/: CMakeLists.txt  u_frame.c  u_frame_timing_writer.c  u_frame_timing_writer.h  u_pacing_app.c  u_timing_pipeline.c  u_timing_pipeline.h
monado/src/xrt/compositor/multi/: comp_multi_compositor.c
monado/src/xrt/drivers/euroc/: euroc_device.c  euroc_player.cpp
monado/src/xrt/drivers/wmr/: wmr_camera.c  wmr_source.c
monado/src/xrt/include/xrt/: xrt_frame.h
monado/src/xrt/state_trackers/oxr/: oxr_session.c
patches/: basalt-save-relations.patch
runs/: .gitignore  README.md  baseline_table.json  baseline_table.txt  build_baseline.py
runs/01_wmr_battery/: camera.csv  display.csv  meta.yaml
runs/02_wmr_performance/: camera.csv  display.csv  meta.yaml
runs/_template/: meta.yaml
runs/slam/MGO02/: slam_relations.csv  trajectory.csv
runs/slam/MH02/: slam_relations.csv  trajectory.csv
runs/slam/MIO02/: slam_relations.csv  trajectory.csv
runs/slam/MOO02/: slam_relations.csv  trajectory.csv
runs/slam/MOO13/: slam_relations.csv  trajectory.csv
runs/slam/TR2/: slam_relations.csv  trajectory.csv
timing/: camera.csv  display.csv  filtering.csv  prediction.csv  slam_relations.csv  timing.csv  tracking.csv
timing/aligned/: display.csv  filtering.csv  offsets.json  prediction.csv  tracking.csv
xrtslam-metrics/: .gitignore  README.md  align_timelines.py  alignment.py  batch.py  completion.py  csvio.py  experiment.py  filter.py  math3d.py  predict.py  pyproject.toml  replay.py  timing.py  tracking.py  utils.py
xrtslam-metrics/cpp/: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  alignment.cpp  alignment_all_over_time.py  alignment_ate_over_time.py  alignment_ate_test.py  alignment_rte_over_time.py  alignment_rte_test.py  evo_config.json  requirements.txt  test_est_trajectory.csv
xrtslam-metrics/ops/: README.md  bsltcalib_ops.py  colmap_ops.py  dmvio_ops.py  dpvo_ops.py  euroc_ops.py  executor.py  hilti2026_ops.py  hilti_rosbag_to_euroc.py  jsondiff.py  latency_ops.py  movslam_ops.py  okvis2_ops.py  opencv_ops.py  openvins_ops.py  rosbag_ops.py  xrrealitycheck_ops.py
xrtslam-metrics/test/: test_golden_filter.py  test_golden_predict.py  test_math3d.py
