[tool.poetry]
name = "xrtslam-metrics"
version = "0.1.0"
description = "Evaluation of Monado SLAM tracking metrics"
authors = ["Mateo de Mayo <mateo.demayo@collabora.com>"]
license = "BSL-1.0"
package-mode = false

# TODO: Move from poetry to uv
# TODO: Move from black to ruff

# We use a python version available in the two latest Ubuntu LTS versions, the rest follows
[tool.poetry.dependencies]
python = "~3.12"
numpy = "2.4.2"
pandas = "3.0.0"
tabulate = "0.9.0"
pyqt5 = "5.15.11"
mplcursors = "0.7"
rosbags = "0.11.0"
evo = "1.34.2"
pybind11 = "3.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "1.19.1"
ipdb = "0.13.13"
pylint = "4.0.4"
types-tabulate = "0.9.0.20241207"
black = "26.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.black]
line-length = 120
